Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoVCplusplus/MotoCom.h

/*************** Master Command /I am ERC.***********************/
DECSPCEX short APIENTRY FcAutoDeleteSet(short nCid,short flg);
DECSPCEX short APIENTRY FcBye(short nCid);
DECSPCEX short APIENTRY FcChangeDir(short nCid,char *dname);
DECSPCEX short APIENTRY FcChangeDrive(short nCid,char *type);
DECSPCEX short APIENTRY FcDiskSize(short nCid,char *disksize,short size);
DECSPCEX short APIENTRY FcDiskSizeSet(short nCid,short flg);
DECSPCEX short APIENTRY FcDownload(short nCid,char *fname);
DECSPCEX short APIENTRY FcFileSize(short nCid,char *fname,long *size);
DECSPCEX short APIENTRY FcFindCurrentDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcFindFirst(short nCid,char *fname,short size);
DECSPCEX short APIENTRY FcFindFirstDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcFindNext(short nCid,char *fname,short size);
DECSPCEX short APIENTRY FcFindNextDir(short nCid,char *dname,short size);
DECSPCEX short APIENTRY FcIsDiskSize(short nCid);
DECSPCEX short APIENTRY FcLogin(short nCid);
DECSPCEX short APIENTRY FcLogout(short nCid);
DECSPCEX short APIENTRY FcMakeDir(short nCid,char *dname);
DECSPCEX short APIENTRY FcRemove(short nCid,char *fname);
DECSPCEX short APIENTRY FcRename(short nCid,char *oldname,char *newname);
DECSPCEX short APIENTRY FcUpload(short nCid,char *fname);