Motoman/MotoComSDK/motocom32dll/header/vb.net/MotoCom32.vb

	
	' /*************** Master Command /I am ERC.***********************/
	Declare Function FcAutoDeleteSet Lib "MotoCom32"  Alias "_FcAutoDeleteSet@8"(ByVal nCid As Short, ByVal flg As Short) As Short
	Declare Function FcBye Lib "MotoCom32"  Alias "_FcBye@4"(ByVal nCid As Short) As Short
	Declare Function FcChangeDir Lib "MotoCom32"  Alias "_FcChangeDir@8"(ByVal nCid As Short, ByVal dname As String) As Short
	Declare Function FcChangeDrive Lib "MotoCom32"  Alias "_FcChangeDrive@8"(ByVal nCid As Short, ByVal type_v As String) As Short
	Declare Function FcDiskSize Lib "MotoCom32"  Alias "_FcDiskSize@12"(ByVal nCid As Short, ByVal disksize As String, ByVal size As Short) As Short
	Declare Function FcDiskSizeSet Lib "MotoCom32"  Alias "_FcDiskSizeSet@8"(ByVal nCid As Short, ByVal flg As Short) As Short
	Declare Function FcDownload Lib "MotoCom32"  Alias "_FcDownload@8"(ByVal nCid As Short, ByVal fname As String) As Short
	Declare Function FcFileSize Lib "MotoCom32"  Alias "_FcFileSize@12"(ByVal nCid As Short, ByVal fname As String, ByRef size As Integer) As Short
	Declare Function FcFindCurrentDir Lib "MotoCom32"  Alias "_FcFindCurrentDir@12"(ByVal nCid As Short, ByVal dname As String, ByVal size As Short) As Short
	Declare Function FcFindFirst Lib "MotoCom32"  Alias "_FcFindFirst@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	Declare Function FcFindFirstDir Lib "MotoCom32"  Alias "_FcFindFirstDir@12"(ByVal nCid As Short, ByVal dname As String, ByVal size As Short) As Short
	Declare Function FcFindNext Lib "MotoCom32"  Alias "_FcFindNext@12"(ByVal nCid As Short, ByVal fname As String, ByVal size As Short) As Short
	Declare Function FcFindNextDir Lib "MotoCom32"  Alias "_FcFindNextDir@12"(ByVal nCid As Short, ByVal dname As String, ByVal size As Short) As Short
	Declare Function FcIsDiskSize Lib "MotoCom32"  Alias "_FcIsDiskSize@4"(ByVal nCid As Short) As Short
	Declare Function FcLogin Lib "MotoCom32"  Alias "_FcLogin@4"(ByVal nCid As Short) As Short
	Declare Function FcLogout Lib "MotoCom32"  Alias "_FcLogout@4"(ByVal nCid As Short) As Short
	Declare Function FcMakeDir Lib "MotoCom32"  Alias "_FcMakeDir@8"(ByVal nCid As Short, ByVal dname As String) As Short
	Declare Function FcRemove Lib "MotoCom32"  Alias "_FcRemove@8"(ByVal nCid As Short, ByVal fname As String) As Short
	Declare Function FcRename Lib "MotoCom32"  Alias "_FcRename@12"(ByVal nCid As Short, ByVal oldname As String, ByVal newname As String) As Short
	Declare Function FcUpload Lib "MotoCom32"  Alias "_FcUpload@8"(ByVal nCid As Short, ByVal fname As String) As Short
	
	
	'#ifdef __cplusplus
	'}
	'#endif
End Module